Add bullets for no reason whatsoever.

--- a/UE5_community.uproject
+++ b/UE5_community.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "UE5_community",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
